<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/images"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/image" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="18dp"
                android:text="@string/custom_background"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:id="@+id/controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/corner"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/setCorner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:thumbHeight="26dp"
                        app:thumbWidth="6dp"
                        app:trackHeight="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refraction"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/setRefractionHeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:thumbHeight="26dp"
                        app:thumbWidth="6dp"
                        app:trackHeight="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/offset"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/setRefractionOffset"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:thumbHeight="26dp"
                        app:thumbWidth="6dp"
                        app:trackHeight="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blur_radius"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/setBlurRadius"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:thumbHeight="26dp"
                        app:thumbWidth="6dp"
                        app:trackHeight="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dispersion"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/setDispersion"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:thumbHeight="26dp"
                        app:thumbWidth="6dp"
                        app:trackHeight="14dp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <com.yoursai.custom_library.widget.LiquidGlassView
        android:id="@+id/liquidGlassView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true" />
</RelativeLayout>
